# stylit

./: .gitignore  README.md
backend/: .env.example  env-example.txt  main.py  pyproject.toml  settings.py
backend/dependencies/: supabase_client.py  user_auth.py
backend/routes/: item_routes.py  profile_routes.py
backend/schemas/: item_schema.py  pagination.py  profile_schema.py
backend/services/: item_service.py  profile_service.py  supabase_storage_service.py
frontend/: package-lock.json  package.json
