[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "gotrue>=2.12.4",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "supabase>=2.22.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
